deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: jeevanlink-deployment

spec:
  replicas: 3

  selector:
    matchLabels:
      app: jeevanlink

  template:
    metadata:
      labels:
        app: jeevanlink

    spec:
      containers:
        - name: jeevanlink-container
          image: neelapunani/jeevanlink

          ports:
            - containerPort: 3000
