image-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jeevanlink-deployment
spec:
  replicas: 5
  selector:
    matchLabels:
      app: jeevanlink
  template:
    metadata:
      labels:
        app: jeevanlink
    spec:
      containers:
        - name: jeevanlink
          image: nanineelapu/jeevanlink
          ports:
            - containerPort: 3000
