configmaps.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: jeevanlink-deployment

spec:
  replicas: 3

  selector:
    matchLabels:
      app: jeevanlink

  template:
    metadata:
      labels:
        app: jeevanlink

    spec:
      containers:
        - name: jeevanlink-container
          image: neelapunani/jeevanlink

          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service

metadata:
  name: jeevanlink-service

spec:
  type: NodePort

  selector:
    app: jeevanlink

  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30080
